fix #2 - toolbar @ overflow ..

--- a/files/custom/markitup/skins/rex_markitup/style.css
+++ b/files/custom/markitup/skins/rex_markitup/style.css
@@ -31,7 +31,7 @@
 }
 .markItUpHeader {
     background: linear-gradient(to bottom, #FAFAFA 0%, #E6E6E6 62%, #D9D9D9 100%) transparent;
-    height: 21px;
+    height: auto;
     padding: 5px 0 3px 7px;
 }
 .markItUpEditor {
@@ -72,6 +72,9 @@
 }
 /***************************************************************************************/
 /* first row of buttons */
+.markItUpHeader ul {
+  display: table;
+}
 .markItUpHeader ul li  {
   list-style:none;
   float:left;
@@ -93,7 +96,7 @@
 .markItUpHeader ul .markItUpSeparator {
   margin:0 10px;
   width:1px;
-  height:16px;
+  height:22px;
   overflow:hidden;
   background-color:#CCC;
 }
@@ -152,4 +155,10 @@
 }
 .markItUpContainer li {
     list-style:none !important;
+}
+
+.markItUpHeader > ul:after {
+    clear: both;
+    content: ".";
+    visibility: hidden;
 }
